Fix issues where error and success messages overlap the sidebar.

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -35,6 +35,7 @@ html, body {
   background: #f4f7f9;
   font-family: "Source Sans Pro", "Helvetica Neue", arial, sans-serif;
   font-weight: 400;
+  font-size: 14px;
   color: #132f4b;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -126,6 +127,11 @@ a:hover {
   padding: 56px 20px;
   min-height: 100%;
   width: 100%;
+}
+
+.error-page,
+.verification-page {
+  padding: 10px 0;
 }
 
 .login-form fieldset {
